--- a/.github/workflows/question_3.yml
+++ b/.github/workflows/question_3.yml
@@ -17,7 +17,8 @@ jobs:
           node-version: ${{ matrix.node-version }}  #this is goint to fetch the matrix.value dynamixally
 
       - name: Install dependencies
-        run: npm install
+        run: npm install && echo "nom installung"
+        
 
       - name: Run tests
         run: npm test
