--- a/.github/workflows/Video_47.yml
+++ b/.github/workflows/Video_47.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: '18'
 
       - name: Intall dependecy 
-        run: npm ci
+        run: npm install
 
       - name: Test the NodeJS
         run: npm test
@@ -26,10 +26,12 @@ jobs:
     steps:
       - name: Get the code
         uses: actions/checkout@v3
-      - name: Install Node JS aain
+      - name: Install Node JS main
         uses: actions/setup-node@v3
+        with: 
+          node-version: '18'
       - name: Install depdendency
-        run: npm install ci
+        run: npm install 
       - name: Simple build
         run: echo "build Start"  
       
